<resources>
    <string name="app_name">MenuBH</string>

    <!-- Telas -->
    <string name="str_home">Tela Inicial</string>
    <string name="str_star"> Favoritos </string>
    <string name="str_addRestaurant"> Add Restaurante </string>

        <!-- Categorias de Restaurantes -->
        <string name="str_sushi"> Sushi </string>
        <string name="str_barbecue"> Churrasco </string>

        <string name="str_fish"> Frutos do Mar  </string>
        <string name="str_pizza"> Pizza </string>

        <string name="str_favorite"> Favoritos </string>

        <string-array name="specialties">
            <item>Sushi</item>
            <item>Barbecue</item>
            <item>Fish</item>
            <item>Pizza</item>
        </string-array>

    <!-- Elementos específicos -->
    
        <!-- Legenda da imagem de vazio -->
        <string name="str_empty"> Você ainda não registrou nenhum restaurante </string>
        <string name="str_start"> Comece aqui! </string>

        <!-- Placeholders da addRestaurantesScreen -->
        <string name="str_inputName"> Insira o Nome Do Restaurante </string>
        <string name="str_inputAddress"> Insira O Endereço do Restaurante </string>
        <string name="str_inputNumber"> Insira o Número do Restaurante </string>
        <string name="str_inputSpecialty"> Adicione a especialidade do restaurante </string>
        <string name="str_inputStars"> Dê avaliação para esse restaurante </string>

        <string name="str_inputSubmit"> Confirmar </string>

        <!-- Valores padrões para o card -->
        <string name="str_rating"> Avaliação: </string>
        <string name="str_address"> Endereço: Rua dos Bobos, N: 0 </string>
        <string name="str_number"> +55 9XXXX-XXXX </string>


    <!-- Nomes de restaurantes fictícios para criação dos cards -->
            <!-- Sushi -->
            <string name="str_feijoadaSushi"> Feijoada de Sushi </string>

            <!-- Churrasco -->
            <string name="str_churrasCia"> Churras &amp; Cia </string>

            <!-- Pizza -->
            <string name="pizzaroma"> Pizzaroma </string>

            <!-- Frutos do Mar -->
            <string name="brisaMar"> Brisa do Mar </string>

</resources>
