<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/layout_card"
    android:layout_margin="20dp"

    android:padding="0dp">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"

        android:padding="8dp"

        android:background="@android:color/transparent"
        android:src="@drawable/img_inactivestar" />

    <ImageView android:id="@+id/specialty_view"
        android:layout_width="60dp"
        android:layout_height="60dp"

        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:layout_marginBottom="12dp"
        android:src="@drawable/img_fish" />

    <TextView android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/specialty_view"

        android:fontFamily="@font/poppins"
        android:text="@string/str_churrasCia"
        android:textColor="@color/text"
        android:textSize="20sp" />

    <LinearLayout android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textName"

        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="14sp"
            android:textColor="@color/text"
            android:text="@string/str_rating"
            android:fontFamily="@font/poppins" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"

            android:gravity="center_vertical"

            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/star1"
                android:layout_width="12dp"
                android:layout_height="12dp"

                android:layout_marginStart="4dp"
                android:layout_marginEnd="2dp"

                android:background="@android:color/transparent"
                android:contentDescription="@string/str_star"
                android:src="@drawable/mini_inactivestar" />

            <ImageButton android:id="@+id/star2"
                android:layout_width="12dp"
                android:layout_height="12dp"

                android:layout_marginEnd="2dp"

                android:src="@drawable/mini_inactivestar"
                android:contentDescription="@string/str_star"
                android:background="@android:color/transparent" />

            <ImageButton android:id="@+id/star3"

                android:layout_width="12dp"
                android:layout_height="12dp"

                android:layout_marginEnd="2dp"

                android:src="@drawable/mini_inactivestar"

                android:contentDescription="@string/str_star"
                android:background="@android:color/transparent"/>

            <ImageButton android:id="@+id/star4"

                android:layout_width="12dp"
                android:layout_height="12dp"

                android:layout_marginEnd="2dp"

                android:src="@drawable/mini_inactivestar"

                android:contentDescription="@string/str_star"
                android:background="@android:color/transparent"/>

            <ImageButton android:id="@+id/star5"

                android:layout_width="12dp"
                android:layout_height="12dp"

                android:layout_marginStart="2dp"
                android:layout_marginEnd="4dp"

                android:src="@drawable/mini_inactivestar"

                android:contentDescription="@string/str_star"
                android:background="@android:color/transparent" />

        </LinearLayout>
    </LinearLayout>

    <TextView android:id="@+id/textNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"

        android:layout_margin="10dp"

        android:textSize="10sp"
        android:textColor="@color/text"
        android:text="@string/str_number"
        android:fontFamily="@font/poppins"

         />

    <TextView android:id="@+id/textAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"

        android:layout_marginTop="12dp"
        android:paddingBottom="5dp"

        android:textSize="10sp"
        android:textColor="@color/text"
        android:fontFamily="@font/poppins"
        android:text="@string/str_address" />

</androidx.constraintlayout.widget.ConstraintLayout>
