<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"

    android:fitsSystemWindows="true"

    tools:context=".AddScreenActivity">

    <LinearLayout
        android:id="@+id/header_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:background="@color/headerFooter"

        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent">

        <!-- Title -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"

            android:fontFamily="@font/poppins"

            android:paddingVertical="8dp"

            android:text="@string/str_addRestaurant"
            android:textAlignment="center"
            android:textColor="@color/backgroundColor"

            android:textSize="24sp" />
    </LinearLayout>

    <!-- Input Form -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        android:gravity="center_horizontal"
        android:orientation="vertical"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_layout">

        <EditText android:id="@+id/nameInput"
            android:layout_width="350dp"
            android:layout_height="wrap_content"

            android:background="@drawable/layout_input"

            android:hint="@string/str_inputName"
            android:inputType="textPostalAddress"

            android:textSize="16sp"
            android:textAlignment="center"
            android:fontFamily="@font/poppins"
            android:textColorHint="@color/input"
            />

        <EditText android:id="@+id/addressInput"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:background="@drawable/layout_input"

            android:hint="@string/str_inputAddress"
            android:inputType="textPersonName"

            android:textSize="16sp"
            android:textAlignment="center"
            android:fontFamily="@font/poppins"
            android:textColorHint="@color/input"
            />

        <EditText android:id="@+id/numberInput"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:background="@drawable/layout_input"

            android:hint="@string/str_inputNumber"
            android:inputType="phone|number"

            android:textSize="16sp"
            android:textAlignment="center"
            android:fontFamily="@font/poppins"
            android:textColorHint="@color/input"
            />

        <RelativeLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_input"
            android:layout_marginTop="20dp">

            <TextView android:id="@+id/specialty_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textAlignment="center"
                android:textColor="@color/input"
                android:fontFamily="@font/poppins"
                android:text="@string/str_inputSpecialty"

                android:layout_centerHorizontal="true" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:orientation="horizontal"

                android:layout_below="@+id/specialty_input"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp">

                <ImageButton android:id="@+id/sushi_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"

                    android:src="@drawable/img_sushi"
                    android:contentDescription="@string/str_sushi"

                    android:background="@android:color/transparent" />

                <ImageButton android:id="@+id/barbecue_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"

                    android:src="@drawable/img_barbecue"
                    android:contentDescription="@string/str_sushi"

                    android:background="@android:color/transparent"
                     />

                <ImageButton android:id="@+id/fish_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"

                    android:src="@drawable/img_fish"
                    android:contentDescription="@string/str_sushi"

                    android:background="@android:color/transparent" />

                <ImageButton android:id="@+id/pizza_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"

                    android:src="@drawable/img_pizza"
                    android:contentDescription="@string/str_sushi"

                    android:background="@android:color/transparent" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="20dp"

            android:background="@drawable/layout_input">

            <TextView
                android:id="@+id/starInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_centerHorizontal="true"

                android:textColor="@color/input"
                android:fontFamily="@font/poppins"
                android:text="@string/str_inputSpecialty" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/starInput"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp">

                <ImageButton
                    android:id="@+id/star1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginEnd="12dp"

                    android:background="@android:color/transparent"
                    android:src="@drawable/img_inactivestar"
                    android:contentDescription="@string/str_star" />

                <ImageButton
                    android:id="@+id/star2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginEnd="12dp"

                    android:background="@android:color/transparent"
                    android:src="@drawable/img_inactivestar"
                    android:contentDescription="@string/str_star" />

                <ImageButton
                    android:id="@+id/star3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginEnd="12dp"

                    android:background="@android:color/transparent"
                    android:src="@drawable/img_inactivestar"
                    android:contentDescription="@string/str_star" />

                <ImageButton
                    android:id="@+id/star4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginEnd="12dp"

                    android:background="@android:color/transparent"
                    android:src="@drawable/img_inactivestar"
                    android:contentDescription="@string/str_star" />

                <ImageButton
                    android:id="@+id/star5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:background="@android:color/transparent"
                    android:src="@drawable/img_inactivestar"
                    android:contentDescription="@string/str_star" />
            </LinearLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="350dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="20dp"

            android:padding="8dp"


            android:textSize="20sp"
            android:text="@string/str_inputSubmit"
            android:textColor="@color/backgroundColor"

            android:fontFamily="@font/poppins"
            android:backgroundTint="@color/components" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/backButton"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:background="@android:color/transparent"
        android:contentDescription="@string/str_star"

        android:padding="8dp"
        android:src="@drawable/img_backbutton"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>