<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity"
    android:background="@color/backgroundColor" >

    <!-- Header -->
    <LinearLayout
        android:id="@+id/header_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:orientation="horizontal"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:background="@color/headerFooter">

        <ImageButton
            android:id="@+id/btn_ascending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:padding="8dp"

            android:layout_gravity="center_vertical"
            android:src="@drawable/img_ascending"
            android:contentDescription="@string/str_home"
            android:background="@android:color/transparent" />

        <!-- Title -->
        <TextView
            android:id="@+id/title_text"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"

            android:fontFamily="@font/poppins"
            android:text="@string/str_home"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textColor="@color/backgroundColor" />

        <ImageButton
            android:id="@+id/btn_descending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:padding="8dp"

            android:layout_gravity="center_vertical"

            android:src="@drawable/img_descending"
            android:contentDescription="@string/str_home"
            android:background="@android:color/transparent" />

    </LinearLayout>

    <!-- Image and Text in the middle -->
    <LinearLayout
        android:id="@+id/img_div"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="vertical"

        app:layout_constraintTop_toBottomOf="@id/header_layout"
        app:layout_constraintBottom_toTopOf="@id/footer_frame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        android:layout_marginBottom="20dp"

        android:gravity="center" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="TODO"
            android:src="@drawable/img_emptyimage" />

        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="@font/poppins"

            android:text="@string/str_empty"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/title_text_part2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/str_start"
            android:textColor="@color/components"
            android:textSize="20sp" />
    </LinearLayout>

    <!-- Footer -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/footer_frame"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/headerFooter"

        app:itemIconSize="45dp"
        app:itemIconTint="@color/backgroundColor"
        app:labelVisibilityMode="unlabeled"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu" />

    <!-- Star Button -->
    <ImageButton android:id="@+id/btn_star"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"

        android:background="@android:color/transparent"
        android:contentDescription="@string/str_star"

        android:padding="8dp"
        android:src="@drawable/img_starbutton"

        android:translationZ="20dp" />

    <ImageButton
        android:id="@+id/addButton"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:background="@android:color/transparent"
        android:contentDescription="@string/str_star"
        android:padding="8dp"
        android:src="@drawable/img_addbutton"

        android:translationZ="20dp"

        app:layout_constraintBottom_toTopOf="@+id/footer_frame"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
